# rest_server

./: .env.local  LICENSE  README.md  pyproject.toml  setup.cfg
app/: settings.py
users/: authentication.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_useraccount_phone.py  0003_alter_useraccount_options_alter_useraccount_email_and_more.py
