[tool.poetry]
name = "rest"
version = "0.1.0"
description = ""
authors = ["gef3dx <gef3dx@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.2"
pillow = "^10.2.0"
djangorestframework = "^3.14.0"
Markdown = "^3.5.2"
django-filter = "^23.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
