[tool.poetry]
name = "rest"
version = "0.1.0"
description = ""
authors = ["gef3dx <gef3dx@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.2"
pillow = "^10.2.0"
djangorestframework = "^3.14.0"
Markdown = "^3.5.2"
django-filter = "^23.5"
djoser = "^2.2.2"
django-storages = "^1.14.2"
social-auth-app-django = "^5.4.0"
social-auth-app-django-mongoengine = "^1.0.0"
django-cors-headers = "^4.3.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
